@@ -10,7 +10,9 @@
 - Improved notifications layout
 - Added BLXNS instruction
 - Added BXNS instruction
+- Added PUSH instruction
 - Fixed BLX instruction not being able to use labels
+- Fixed STM/LDM instruction not detecting the lack of update mode
 
 
 0.1.10 -> 0.2.0
